--- a/package.json
+++ b/package.json
@@ -1,22 +1,58 @@
 {
-  "name": "selectivity",
+  "_args": [
+    [
+      {
+        "raw": "selectivity@^3.0.4",
+        "scope": null,
+        "escapedName": "selectivity",
+        "name": "selectivity",
+        "rawSpec": "^3.0.4",
+        "spec": ">=3.0.4 <4.0.0",
+        "type": "range"
+      },
+      "/Users/admin/cloudlock/projects/csf-webapp"
+    ]
+  ],
+  "_from": "selectivity@>=3.0.4 <4.0.0",
+  "_id": "selectivity@3.0.4",
+  "_inCache": true,
+  "_location": "/selectivity",
+  "_nodeVersion": "6.10.0",
+  "_npmOperationalInternal": {
+    "host": "packages-12-west.internal.npmjs.com",
+    "tmp": "tmp/selectivity-3.0.4.tgz_1493218553361_0.4187192437238991"
+  },
+  "_npmUser": {
+    "name": "arendjr",
+    "email": "arendjr@gmail.com"
+  },
+  "_npmVersion": "3.10.10",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "selectivity@^3.0.4",
+    "scope": null,
+    "escapedName": "selectivity",
+    "name": "selectivity",
+    "rawSpec": "^3.0.4",
+    "spec": ">=3.0.4 <4.0.0",
+    "type": "range"
+  },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/selectivity/-/selectivity-3.0.4.tgz",
+  "_shasum": "9c00bdcaf9cc3d9c8aae49d0eb97f9ac3ed1fbf2",
+  "_shrinkwrap": null,
+  "_spec": "selectivity@^3.0.4",
+  "_where": "/Users/admin/cloudlock/projects/csf-webapp",
+  "bugs": {
+    "url": "https://github.com/arendjr/selectivity/issues"
+  },
+  "dependencies": {
+    "lodash": "^4.0.0"
+  },
   "desc": "Modular and light-weight selection library",
-  "version": "3.0.4",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/arendjr/selectivity.git"
-  },
-  "scripts": {
-    "build-jquery-min": "gulp --api=jquery --bundle-name=jquery --exclude-modules=plugins/options-validator --minify",
-    "build-jquery-source": "gulp --api=jquery --bundle-name=jquery --derequire",
-    "build-react-min": "gulp --api=react --bundle-name=react --exclude-modules=plugins/options-validator --export-global --minify",
-    "build-react-source": "gulp --api=react --bundle-name=react --export-global --derequire",
-    "build-vanilla-min": "gulp --bundle-name= --exclude-modules=plugins/options-validator --export-global --minify",
-    "build-vanilla-source": "gulp --bundle-name= --export-global --derequire",
-    "build": "npm run build-jquery-source && npm run build-jquery-min && npm run build-react-min && npm run build-react-source && npm run build-vanilla-min && npm run build-vanilla-source",
-    "lint": "eslint .",
-    "test": "eslint . && gulp unit-tests"
-  },
+  "description": "Selectivity.js ==============",
   "devDependencies": {
     "browser-sync": "^2.14.0",
     "browserify": "^14.0.0",
@@ -27,9 +63,9 @@
     "freshy": "^1.0.2",
     "glob": "^7.0.3",
     "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^4.0.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.4.3",
-    "gulp-csso": "^3.0.0",
+    "gulp-csso": "^2.0.0",
     "gulp-derequire": "^2.0.0",
     "gulp-header": "^1.7.1",
     "gulp-if": "^2.0.0",
@@ -37,21 +73,24 @@
     "gulp-replace": "^0.5.0",
     "gulp-ruby-sass": "^2.0.0",
     "gulp-tape": "0.0.9",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.1",
     "jquery": "^3.0.0",
-    "jsdom": "^11.0.0",
+    "jsdom": "^10.0.0",
     "prop-types": "^15.5.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "tape": "^4.5.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "yargs": "^8.0.1"
+    "yargs": "^7.0.2"
   },
-  "dependencies": {
-    "lodash": "^4.0.0"
+  "directories": {},
+  "dist": {
+    "shasum": "9c00bdcaf9cc3d9c8aae49d0eb97f9ac3ed1fbf2",
+    "tarball": "https://registry.npmjs.org/selectivity/-/selectivity-3.0.4.tgz"
   },
+  "homepage": "https://github.com/arendjr/selectivity#readme",
   "keywords": [
     "dropdown",
     "ecosystem:jquery",
@@ -69,5 +108,31 @@
     "tagging",
     "ui"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "main": "./selectivity.js",
+  "maintainers": [
+    {
+      "name": "arendjr",
+      "email": "arendjr@gmail.com"
+    }
+  ],
+  "name": "selectivity",
+  "optionalDependencies": {},
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/arendjr/selectivity.git"
+  },
+  "scripts": {
+    "build": "npm run build-jquery-source && npm run build-jquery-min && npm run build-react-min && npm run build-react-source && npm run build-vanilla-min && npm run build-vanilla-source",
+    "build-jquery-min": "gulp --api=jquery --bundle-name=jquery --exclude-modules=plugins/options-validator --minify",
+    "build-jquery-source": "gulp --api=jquery --bundle-name=jquery --derequire",
+    "build-react-min": "gulp --api=react --bundle-name=react --exclude-modules=plugins/options-validator --export-global --minify",
+    "build-react-source": "gulp --api=react --bundle-name=react --export-global --derequire",
+    "build-vanilla-min": "gulp --bundle-name= --exclude-modules=plugins/options-validator --export-global --minify",
+    "build-vanilla-source": "gulp --bundle-name= --export-global --derequire",
+    "lint": "eslint .",
+    "test": "eslint . && gulp unit-tests"
+  },
+  "version": "3.0.4"
 }
